Begin adding analysis run UI. Lots more UI improvements
